# Reversible-MNIST-AI-training

./: CMakeLists.txt  README.md  analyze_confusion_gpu.py  buildscript  setup_gpu.py  train_gpu.py
fast_network/: bindings_gpu.cpp  common.h  fast_network_gpu.hip.cpp  genetic_operators.cpp  genetic_operators.h  permutations_6.h
